--- a/assets/css/components/figure.css
+++ b/assets/css/components/figure.css
@@ -1,6 +1,7 @@
 .figure {
   margin: var(--vb) 0;
   position: relative;
+  clear: right;
 }
 
 .figure figcaption {
