--- a/assets/css/components/info.css
+++ b/assets/css/components/info.css
@@ -16,6 +16,7 @@
     linear-gradient(to right, var(--blue), var(--pink)); /* 2 */
   background-origin: border-box; /* 2 */
   background-clip: padding-box, border-box; /* 2 */
+  clear: right;
 }
 
 .Info::before {
